--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "chart.js": "^2.9.4",
     "graphql": "^15.4.0",
     "immer": "^8.0.1",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
